# dart-exiv2-ext

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  exiv2_wrapper.cpp  pubspec.yaml
lib/: exiv2.dart
lib/src/: exiv2.dart  exiv2_enums.dart  exiv2_file.dart
native/: CMakeLists.txt  exiv2_enums.h  exiv2_impl.cpp  exiv2_impl.h  exiv2_wrapper.cpp
native/dev/: refresh.sh
test/: exiv2_enums_test.dart  exiv2_test.dart
tool/: generate_c_and_dart_enums_for_exiv2_tags.dart  get_target_platform.dart
tool/templates/: exiv2_enums.dart.template  exiv2_enums.h.template
